# ROA_processor

./: .gitignore  Codex.md  README.md  prompt1.txt  pyproject.toml
roa_processor/: cli.py  models.py
roa_processor/components/: __init__.py  discover.py  models.py  read_prn.py
roa_processor/io/: discover.py  export.py  load_experiment.py  parse_filename.py  parse_header.py  read_out_file.py
roa_processor/plotting/: plots.py
roa_processor/processing/: average.py  isolate_blocks.py  raman_component_subtraction.py  roa_qc.py  spike_detection.py
tests/: test_cli.py  test_components.py  test_export.py  test_isolate_blocks.py  test_next_version.py  test_parse_filename.py  test_parse_header.py  test_plots.py  test_raman_component_subtraction.py
