[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roa-processor"
version = "0.1.0"
description = "MVP CLI for Raman and ROA block processing"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.scripts]
roa = "roa_processor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roa_processor*"]
