[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roa-processor"
version = "0.2.0"
description = "MVP CLI for Raman and ROA block processing"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
roa = "roa_processor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roa_processor*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp -p no:cacheprovider"